@@ -382,6 +382,7 @@ enum AVCodecID {
     AV_CODEC_ID_ADPCM_IMA_APM,
     AV_CODEC_ID_ADPCM_IMA_ALP,
     AV_CODEC_ID_ADPCM_IMA_MTF,
+    AV_CODEC_ID_ADPCM_IMA_CUNNING,
 
     /* AMR */
     AV_CODEC_ID_AMR_NB = 0x12000,
